--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sakai-ng",
+  "name": "hourly",
   "version": "15.0.0",
   "scripts": {
     "ng": "ng",
@@ -20,7 +20,14 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.1",
+    "@popperjs/core": "^2.11.6",
+    "angular-calendar": "^0.31.0",
+    "angularx-flatpickr": "^7.0.0",
+    "bootstrap": "^5.2.3",
     "chart.js": "^3.3.2",
+    "date-fns": "^2.29.3",
+    "ng-bootstrap": "^1.6.3",
     "primeflex": "^3.2.1",
     "primeicons": "6.0.1",
     "primeng": "15.1.1",
@@ -39,6 +46,7 @@
     "@angular-eslint/template-parser": "^15.1.0",
     "@angular/cli": "^15.1.0",
     "@angular/compiler-cli": "^15.1.0",
+    "@angular/localize": "^15.2.1",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/parser": "5.37.0",
