--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@popperjs/core": "^2.11.6",
     "angular-calendar": "^0.31.0",
     "angularx-flatpickr": "^7.0.0",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0-alpha1",
     "chart.js": "^3.3.2",
     "date-fns": "^2.29.3",
     "ng-bootstrap": "^1.6.3",
